fix scaling of page on mobile devices

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ div.screenshots img, .screenshot {
     border: 1px solid #0CC;
     padding: 0.3em;
     border-radius: 0.7em;
+    max-width: 100%;
 }
 div.screenshots a:hover {
     background-color: #000 !important;
